--- a/estate_vehicle/views/estate_vehicle_sparepart_log.xml
+++ b/estate_vehicle/views/estate_vehicle_sparepart_log.xml
@@ -65,12 +65,12 @@
             <field name="model">estate.vehicle.log.sparepart</field>
             <field name="arch" type="xml">
                 <search string="Vehicles sparepart Logs" >
-                    <field name="vehicle_id" />
-                    <field name="date"/>
-                    <field name="purchaser_id" />
-                    <field name="product_id"/>
-                    <field name="unit" />
-                    <field name="total_amount" sum="Price"/>
+                    <field name="vehicle_id" string="Vehicle"/>
+                    <field name="date" string="Date"/>
+                    <field name="purchaser_id" string="Purchaser"/>
+                    <field name="product_id" string="Product"/>
+                    <field name="unit" string="Unit"/>
+                    <field name="total_amount" sum="Price" string="Amount"/>
                     <group expand="0" string="Group By">
                         <filter name="groupby_vehicle" context="{'group_by' : 'vehicle_id'}" string="Vehicle"/>
                     </group>
