--- a/estate_workshop/views/estate_mecanic_timesheet.xml
+++ b/estate_workshop/views/estate_mecanic_timesheet.xml
@@ -100,8 +100,9 @@
                     <field name="id" invisible="1"/>
                     <field name="date_activity_transport" string="Date Activity"/>
                     <field name="owner_id"  invisible="1" readonly="1"/>
-                    <field name="dc_type" invisible="1"/>
+                    <field name="dc_type" invisible="0" readonly="1"/>
                     <field name="asset_id" string="Asset" options="{'no_create_edit': True}"/>
+                    <field name="vehicle_id" readonly="1"/>
                     <field name="employee_id" string="Employee" options="{'no_create_edit': True}"/>
                     <field name="mastertask_id" string="Task"/>
                     <field name="activity_id" string="Activity" options="{'no_create_edit': True}"/>
