--- a/estate_workshop/views/view_master_effectivedate_calendar.xml
+++ b/estate_workshop/views/view_master_effectivedate_calendar.xml
@@ -65,6 +65,7 @@
             <field name="arch" type="xml">
                     <calendar string="Master Calendar " color="name" date_start="date_start" date_stop="date_stop">
                         <field name="agendaholiday_id" string="Holiday"/>
+                        <field name="role"/>
                         <field name="name" string="Name" readonly="1" invisible="1"/>
                     </calendar>
              </field>
