--- a/hr_fingerprint_ams/views/hr_fingerprint.xml
+++ b/hr_fingerprint_ams/views/hr_fingerprint.xml
@@ -54,6 +54,63 @@
             </field>
         </record>
 
+        <record id="inherited_estate_upkeep_labour_view_search" model="ir.ui.view">
+            <field name="name">estate.upkeep.labour.view.search.inherit</field>
+            <field name="model">estate.upkeep.labour</field>
+            <field name="inherit_id" ref="estate.upkeep_labour_view_search"/>
+            <field name="arch" type="xml">
+                <xpath expr="//filter[@name='filter_approved']" position="after">
+                    <filter name="filter_fingerprint" string="No Fingerprint"
+                            domain="[('attendance_out', '=', False)]"/>
+                </xpath>
+            </field>
+        </record>
+
+        <record id="labour_fingerprint_view_search" model="ir.ui.view">
+            <field name="name">Labour Fingerprint Search</field>
+            <field name="model">hr_fingerprint_ams.fingerprint</field>
+            <field name="priority" eval="1"/>
+            <field name="arch" type="xml">
+                <search>
+                    <field name="employee_id"/>
+                    <field name="team_id"/>
+                    <field name="assistant_id"/>
+                    <filter name="filter_no_sign_in" string="No Fingerprint"
+                            domain="[('sign_in', '=', False) ]"/>
+                    <filter name="filter_month" icon="terp-go-month" string="This Month"
+                            domain="[('date','&lt;=',(context_today()+relativedelta(day=31)).strftime('%%Y-%%m-%%d')), ('date','&gt;=',(context_today()-relativedelta(day=1)).strftime('%%Y-%%m-%%d'))]"/>
+                    <filter name="filter_year" icon="terp-go-year" string="This Year"
+                            domain="[('date','&lt;=',(context_today()+relativedelta(day=31, month=12)).strftime('%%Y-%%m-%%d')), ('date','&gt;=',(context_today()-relativedelta(day=1, month=1)).strftime('%%Y-%%m-%%d'))]"/>
+
+                    <group string="Group By">
+                        <filter name="by_assistant" string="Assistant"
+                                context="{'group_by': 'assistant_id'}"/>
+                        <filter name="by_team" string="Team"
+                                context="{'group_by': 'team_id'}"/>
+                        <filter name="by_date" string="Date"
+                                context="{'group_by': 'date'}"/>
+                    </group>
+                </search>
+            </field>
+        </record>
+
+        <record id="labour_fingerprint_view_tree" model="ir.ui.view">
+            <field name="name">Labour Fingerprint Report</field>
+            <field name="model">hr_fingerprint_ams.fingerprint</field>
+            <field name="priority" eval="1"/>
+            <field name="arch" type="xml">
+                <tree colors="red: (sign_in == False) or (sign_out == False)">
+                    <field name="date"/>
+                    <field name="employee_id"/>
+                    <field name="sign_in"/>
+                    <field name="sign_out"/>
+                    <field name="worked_hours"/>
+                    <field name="number_of_day"/>
+                </tree>
+            </field>
+        </record>
+
+        <!-- Attendance -->
         <record id="action_fingerprint_attendance" model="ir.actions.act_window" >
             <field name="name">Fingerprint Attendance</field>
             <field name="res_model">hr_fingerprint_ams.attendance</field>
@@ -63,6 +120,22 @@
         <menuitem id="fingerprint_attendance" name="Fingerprint Attendance"
                   parent="hr_attendance.menu_hr_attendance"
                   action="action_fingerprint_attendance"
+                  groups="estate.group_user"/>
+
+
+        <!-- Operation Control -->
+        <record id="labour_fingerprint_report_action" model="ir.actions.act_window">
+            <field name="name">Labour Fingerprint Report</field>
+            <field name="res_model">hr_fingerprint_ams.fingerprint</field>
+            <field name="priority">1</field>
+            <field name="view_mode">tree</field>
+            <field name="view_id" ref="labour_fingerprint_view_tree"/>
+            <!--<field name="context">{'search_default_by_assistant': 1, 'search_default_filter_no_sign_in': 1}</field>-->
+        </record>
+
+        <menuitem id="labour_fingerprint_report_menu" name="Labour Fingerprint Report"
+                  parent="estate.estate_operation_control_menu"
+                  action="labour_fingerprint_report_action"
                   groups="estate.group_user"/>
     </data>
 </openerp>
