[ADD] estate_vehicle : hidden view di fleet karena sparepart menggunakan dari modul maintenance

--- a/estate_vehicle/views/estate_vehicle_sparepart_log.xml
+++ b/estate_vehicle/views/estate_vehicle_sparepart_log.xml
@@ -106,6 +106,6 @@
             </field>
         </record>
 
-        <menuitem action="estate_vehicle.fleet_vehicle_log_sparepart_act" parent="fleet.fleet_vehicles" id="fleet_vehicle_log_sparepart_menu" groups="fleet.group_fleet_user"/>
+        <!--<menuitem action="estate_vehicle.fleet_vehicle_log_sparepart_act" parent="fleet.fleet_vehicles" id="fleet_vehicle_log_sparepart_menu" groups="fleet.group_fleet_user"/>-->
     </data>
 </openerp>
