--- a/estate_vehicle/views/view_timesheet_premi.xml
+++ b/estate_vehicle/views/view_timesheet_premi.xml
@@ -1,7 +1,7 @@
 <openerp>
-    <data>
+    <data>>
          <record model="ir.ui.view" id="view_timesheet_premi_config_tree">
-            <field name="name">View Timesheet Premi</field>
+            <field name="name">Vehicle Piece Rate Premi</field>
             <field name="model">v.timesheet.premi</field>
             <field name="priority" eval="1"/>
             <field name="arch" type="xml">
@@ -20,7 +20,7 @@
         </record>
 
         <record model='ir.ui.view' id='vehicle_timesheet_premi_search'>
-            <field name="name">vehicle Timesheet Premi Search</field>
+            <field name="name">Vehicle Piece Rate Search</field>
             <field name="model">v.timesheet.premi</field>
             <field name="arch" type="xml">
                 <search string="Vehicles timesheet premi" >
@@ -41,14 +41,14 @@
         </record>
 
          <record model="ir.actions.act_window" id="action_list_view_timesheet_config">
-                <field name="name">View Timesheet Premi</field>
+                <field name="name">Vehicle Piece Rate</field>
                 <field name="res_model">v.timesheet.premi</field>
                 <field name="view_mode">tree</field>
                 <field name="context">{"search_default_groupby_date" : True}</field>
         </record>
 
         <menuitem id="estate_timesheet_premi" name="Vehicle Piece Rate"
-                  parent="estate_vehicle.estate_vehicle_timesheet_menu"
+                  parent="fleet.menu_fleet_reporting"
                   action="action_list_view_timesheet_config"
                   groups="base.group_no_one" sequence="13"/>
     </data>
